# PSST

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/source/: theory.rst
examples/evaluate/: config.yaml  evaluate.py
examples/optimize/: optimize.py  optimizer_config.yaml  run.sh
examples/train/: adam_config.yaml  bth_run_config.yaml  config.yaml  run.sh  run_config.yaml  train.py  train_bg.py
generator_configs/: AridAgar.yaml
src/psst/: __init__.py  checkpoint.py  configuration.py  model_names.yaml  parameter.py  plot.py  range.py  samplegenerator.py  save.py  tensors.py  training.py
src/psst/cli/: main.py  psst.py
src/psst/evaluation/: __init__.py  config.py  evaluate.py  structures.py
src/psst/models/: Inception3.py  Vgg13.py  _InceptionSupport.py  __init__.py
src/psst/optimization/: __init__.py  config.py  optimize.py
src/psst/training/: __init__.py  config.py  train.py
test/: test_configuration.py  test_grid_tensor.py  test_normed_tensor.py  test_range.py  test_sample_generator.py
