[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "psst"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "attrs",
    "numpy",
    "optuna",
    "ruamel.yaml",
    "scipy",
    "torch",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
]